Update notebook with completed Naive Bayes Tests
The output has been included too, for comparison later on.

--- a/practical.ipynb
+++ b/practical.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# automatically reload changes from other modules without having to restart kernel\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,9 +26,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- classifying reviews using sentiment lexicon  ---\n",
+      "token-only results: 0.68\n",
+      "magnitude results:0.69\n",
+      "magnitude lexicon results are not significant with respect to token-only\n"
+     ]
+    }
+   ],
    "source": [
     "# retrieve corpus\n",
     "corpus=MovieReviewCorpus(stemming=False,pos=False)\n",
@@ -51,9 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- classifying reviews using Naive Bayes on held-out test set ---\n",
+      "Accuracy without smoothing: 0.52\n"
+     ]
+    }
+   ],
    "source": [
     "# question 1.0\n",
     "print(\"--- classifying reviews using Naive Bayes on held-out test set ---\")\n",
@@ -67,9 +98,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy using smoothing: 0.82\n",
+      "results using smoothing are significant with respect to no smoothing\n"
+     ]
+    }
+   ],
    "source": [
     "# question 2.0\n",
     "# use smoothing\n",
@@ -91,9 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- classifying reviews using 10-fold cross-evaluation ---\n",
+      "Accuracy: 0.810\n",
+      "Std. Dev: 0.020736441353327688\n"
+     ]
+    }
+   ],
    "source": [
     "# question 3.0\n",
     "print(\"--- classifying reviews using 10-fold cross-evaluation ---\")\n",
@@ -102,14 +152,29 @@
     "# using cross-eval for smoothed predictions from now on\n",
     "smoothed_preds=NB.predictions\n",
     "print(f\"Accuracy: {NB.getAccuracy():.3f}\")\n",
-    "print(f\"Std. Dev: {NB.getStdDeviation()}\")"
+    "print(f\"Std. Dev: {NB.getStdDeviation():.3f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- stemming corpus ---\n",
+      "--- cross-validating NB using stemming ---\n",
+      "Accuracy: 0.814\n",
+      "Std. Dev: 0.026\n",
+      "results using stemming are not significant with respect to smoothed NB with no stemming\n",
+      "--- determining the number of features before/after stemming ---\n",
+      "Number of features without stemming: 52555\n",
+      "Number of features with stemming: 32404\n"
+     ]
+    }
+   ],
    "source": [
     "# question 4.0\n",
     "print(\"--- stemming corpus ---\")\n",
@@ -121,18 +186,36 @@
     "print(f\"Accuracy: {NB.getAccuracy():.3f}\")\n",
     "print(f\"Std. Dev: {NB.getStdDeviation():.3f}\")\n",
     "\n",
-    "# TODO Q4.1\n",
-    "# see if stemming significantly improves results on smoothed NB\n",
+    "# Q4.1\n",
+    "p_value=signTest.getSignificance(smoothed_preds, stemmed_preds)\n",
+    "significance = \"significant\" if p_value < 0.05 else \"not significant\"\n",
+    "print(f\"results using stemming are {significance} with respect to smoothed NB with no stemming\")\n",
     "\n",
-    "# TODO Q4.2\n",
-    "print(\"--- determining the number of features before/after stemming ---\")"
+    "# Q4.2\n",
+    "print(\"--- determining the number of features before/after stemming ---\")\n",
+    "NB.train(stemmed_corpus.train) # Retrain on full training data before counting number of features\n",
+    "num_stemmed_features = len(NB.vocabulary)\n",
+    "print(f\"Number of features without stemming: {num_non_stemmed_features}\")\n",
+    "print(f\"Number of features with stemming: {num_stemmed_features}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- cross-validating naive bayes using smoothing and bigrams ---\n",
+      "Accuracy: 0.83\n",
+      "Std. Dev: 0.03\n",
+      "results using smoothing and bigrams are not significant with respect to smoothing only\n",
+      "--- cross-validating naive bayes using smoothing and bigrams and trigrams  ---\n"
+     ]
+    }
+   ],
    "source": [
     "# question Q5.0\n",
     "# cross-validate model using smoothing and bigrams\n",
@@ -143,14 +226,39 @@
     "print(f\"Accuracy: {NB.getAccuracy():.2f}\") \n",
     "print(f\"Std. Dev: {NB.getStdDeviation():.2f}\")\n",
     "\n",
+    "# get number of bigram features\n",
+    "NB.train(corpus.train)\n",
+    "num_bigram_features = len(NB.vocabulary)\n",
     "\n",
     "# see if bigrams significantly improves results on smoothed NB only\n",
     "p_value=signTest.getSignificance(smoothed_preds,smoothed_and_bigram_preds)\n",
     "signifance = \"significant\" if p_value < 0.05 else \"not significant\"\n",
     "print(f\"results using smoothing and bigrams are {signifance} with respect to smoothing only\")\n",
     "\n",
+    "# cross-validate model using smoothing and bigrams and trigrams\n",
+    "print(\"--- cross-validating naive bayes using smoothing and bigrams and trigrams  ---\")\n",
+    "NB=NaiveBayesText(smoothing=True,bigrams=True,trigrams=True,discard_closed_class=False)\n",
+    "NB.crossValidate(corpus)\n",
+    "smoothed_and_bigram_and_trigrams_preds=NB.predictions\n",
+    "print(f\"Accuracy: {NB.getAccuracy():.2f}\")\n",
+    "print(f\"Std. Dev: {NB.getStdDeviation():.2f}\")\n",
     "\n",
-    "# TODO Q5.1"
+    "# get number of trigram features\n",
+    "NB.train(corpus.train)\n",
+    "num_trigram_features = len(NB.vocabulary)\n",
+    "\n",
+    "# see if bigrams+trigrams significantly improves results on smoothed NB only\n",
+    "p_value=signTest.getSignificance(smoothed_preds,smoothed_and_bigram_and_trigrams_preds)\n",
+    "significance = \"significant\" if p_value < 0.05 else \"not significant\"\n",
+    "print(f\"results using smoothing and bigrams and trigrams are {significance} with respect to smoothing only\")\n",
+    "\n",
+    "\n",
+    "# Q5.1\n",
+    "print(\"--- determining the number of features with/without bigrams ---\")\n",
+    "num_unigram_features = num_non_stemmed_features\n",
+    "print(f\"Number of features with just unigrams smoothing: {num_unigram_features}\")\n",
+    "print(f\"Number of features with unigrams and bigrams: {num_bigram_features}\")\n",
+    "print(f\"Number of features with unigrams, bigrams and trigrams: {num_trigram_features}\")"
    ]
   },
   {
@@ -202,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
