Split Naive Bayes experiments into separate cells

--- a/practical.ipynb
+++ b/practical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,14 +73,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- classifying reviews using Naive Bayes on held-out test set ---\n",
+      "--- classifying reviews using Naive Bayes on held-out test set ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/shaneweisz/Documents/MLMI/NLP_MLMI13/Classifiers.py:147: RuntimeWarning: divide by zero encountered in log\n",
+      "  score[c] += np.log(self.condProb[c][token])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Accuracy without smoothing: 0.52\n"
      ]
     }
@@ -98,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +135,6 @@
     "num_non_stemmed_features=len(NB.vocabulary)\n",
     "print(f\"Accuracy using smoothing: {NB.getAccuracy():.2f}\")\n",
     "\n",
-    "\n",
     "# question 2.1\n",
     "# see if smoothing significantly improves results\n",
     "p_value=signTest.getSignificance(non_smoothed_preds,smoothed_preds)\n",
@@ -131,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +153,7 @@
      "text": [
       "--- classifying reviews using 10-fold cross-evaluation ---\n",
       "Accuracy: 0.810\n",
-      "Std. Dev: 0.020736441353327688\n"
+      "Std. Dev: 0.021\n"
      ]
     }
    ],
@@ -157,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -168,10 +181,7 @@
       "--- cross-validating NB using stemming ---\n",
       "Accuracy: 0.814\n",
       "Std. Dev: 0.026\n",
-      "results using stemming are not significant with respect to smoothed NB with no stemming\n",
-      "--- determining the number of features before/after stemming ---\n",
-      "Number of features without stemming: 52555\n",
-      "Number of features with stemming: 32404\n"
+      "results using stemming are not significant with respect to smoothed NB with no stemming\n"
      ]
     }
    ],
@@ -189,8 +199,25 @@
     "# Q4.1\n",
     "p_value=signTest.getSignificance(smoothed_preds, stemmed_preds)\n",
     "significance = \"significant\" if p_value < 0.05 else \"not significant\"\n",
-    "print(f\"results using stemming are {significance} with respect to smoothed NB with no stemming\")\n",
-    "\n",
+    "print(f\"results using stemming are {significance} with respect to smoothed NB with no stemming\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- determining the number of features before/after stemming ---\n",
+      "Number of features without stemming: 52555\n",
+      "Number of features with stemming: 32404\n"
+     ]
+    }
+   ],
+   "source": [
     "# Q4.2\n",
     "print(\"--- determining the number of features before/after stemming ---\")\n",
     "NB.train(stemmed_corpus.train) # Retrain on full training data before counting number of features\n",
@@ -201,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -211,8 +238,7 @@
       "--- cross-validating naive bayes using smoothing and bigrams ---\n",
       "Accuracy: 0.83\n",
       "Std. Dev: 0.03\n",
-      "results using smoothing and bigrams are not significant with respect to smoothing only\n",
-      "--- cross-validating naive bayes using smoothing and bigrams and trigrams  ---\n"
+      "results using smoothing and bigrams are not significant with respect to smoothing only\n"
      ]
     }
    ],
@@ -233,8 +259,26 @@
     "# see if bigrams significantly improves results on smoothed NB only\n",
     "p_value=signTest.getSignificance(smoothed_preds,smoothed_and_bigram_preds)\n",
     "signifance = \"significant\" if p_value < 0.05 else \"not significant\"\n",
-    "print(f\"results using smoothing and bigrams are {signifance} with respect to smoothing only\")\n",
-    "\n",
+    "print(f\"results using smoothing and bigrams are {signifance} with respect to smoothing only\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- cross-validating naive bayes using smoothing and bigrams and trigrams  ---\n",
+      "Accuracy: 0.83\n",
+      "Std. Dev: 0.02\n",
+      "results using smoothing and bigrams and trigrams are not significant with respect to smoothing only\n"
+     ]
+    }
+   ],
+   "source": [
     "# cross-validate model using smoothing and bigrams and trigrams\n",
     "print(\"--- cross-validating naive bayes using smoothing and bigrams and trigrams  ---\")\n",
     "NB=NaiveBayesText(smoothing=True,bigrams=True,trigrams=True,discard_closed_class=False)\n",
@@ -250,9 +294,26 @@
     "# see if bigrams+trigrams significantly improves results on smoothed NB only\n",
     "p_value=signTest.getSignificance(smoothed_preds,smoothed_and_bigram_and_trigrams_preds)\n",
     "significance = \"significant\" if p_value < 0.05 else \"not significant\"\n",
-    "print(f\"results using smoothing and bigrams and trigrams are {significance} with respect to smoothing only\")\n",
-    "\n",
-    "\n",
+    "print(f\"results using smoothing and bigrams and trigrams are {significance} with respect to smoothing only\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- determining the number of features with/without bigrams ---\n",
+      "Number of features with just unigrams smoothing: 52555\n",
+      "Number of features with unigrams and bigrams: 500086\n",
+      "Number of features with unigrams, bigrams and trigrams: 1462605\n"
+     ]
+    }
+   ],
+   "source": [
     "# Q5.1\n",
     "print(\"--- determining the number of features with/without bigrams ---\")\n",
     "num_unigram_features = num_non_stemmed_features\n",
@@ -263,9 +324,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- classifying reviews using SVM 10-fold cross-eval ---\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO Q6 and 6.1\n",
     "print(\"--- classifying reviews using SVM 10-fold cross-eval ---\")"
@@ -273,9 +342,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- adding in POS information to corpus ---\n",
+      "--- training svm on word+pos features ----\n",
+      "--- training svm discarding closed-class words ---\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO Q7\n",
     "print(\"--- adding in POS information to corpus ---\")\n",
@@ -285,9 +364,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- using document embeddings ---\n"
+     ]
+    }
+   ],
    "source": [
     "# question 8.0\n",
     "print(\"--- using document embeddings ---\")"
