Add SVM normalization option, and run SVM experiments

--- a/practical.ipynb
+++ b/practical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,33 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from Corpora import MovieReviewCorpus\n",
     "from Lexicon import SentimentLexicon\n",
     "from Statistics import SignTest\n",
-    "from Classifiers import NaiveBayesText, SVMText\n",
+    "from Classifiers import NaiveBayesText, SVMText, BoWFeatureType\n",
     "from Extensions import SVMDoc2Vec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- classifying reviews using sentiment lexicon  ---\n",
-      "token-only results: 0.68\n",
-      "magnitude results:0.69\n",
-      "magnitude lexicon results are not significant with respect to token-only\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# retrieve corpus\n",
     "corpus=MovieReviewCorpus(stemming=False,pos=False)\n",
@@ -75,30 +64,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- classifying reviews using Naive Bayes on held-out test set ---\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/shaneweisz/Documents/MLMI/NLP_MLMI13/Classifiers.py:147: RuntimeWarning: divide by zero encountered in log\n",
-      "  score[c] += np.log(self.condProb[c][token])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy without smoothing: 0.52\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# question 1.0\n",
     "print(\"--- classifying reviews using Naive Bayes on held-out test set ---\")\n",
@@ -114,16 +80,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy using smoothing: 0.82\n",
-      "results using smoothing are significant with respect to no smoothing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# question 2.0\n",
     "# use smoothing\n",
@@ -146,17 +103,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- classifying reviews using 10-fold cross-evaluation ---\n",
-      "Accuracy: 0.810\n",
-      "Std. Dev: 0.021\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# question 3.0\n",
     "print(\"--- classifying reviews using 10-fold cross-evaluation ---\")\n",
@@ -172,19 +119,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- stemming corpus ---\n",
-      "--- cross-validating NB using stemming ---\n",
-      "Accuracy: 0.814\n",
-      "Std. Dev: 0.026\n",
-      "results using stemming are not significant with respect to smoothed NB with no stemming\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# question 4.0\n",
     "print(\"--- stemming corpus ---\")\n",
@@ -206,17 +141,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- determining the number of features before/after stemming ---\n",
-      "Number of features without stemming: 52555\n",
-      "Number of features with stemming: 32404\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q4.2\n",
     "print(\"--- determining the number of features before/after stemming ---\")\n",
@@ -230,18 +155,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- cross-validating naive bayes using smoothing and bigrams ---\n",
-      "Accuracy: 0.83\n",
-      "Std. Dev: 0.03\n",
-      "results using smoothing and bigrams are not significant with respect to smoothing only\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# question Q5.0\n",
     "# cross-validate model using smoothing and bigrams\n",
@@ -266,18 +180,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- cross-validating naive bayes using smoothing and bigrams and trigrams  ---\n",
-      "Accuracy: 0.83\n",
-      "Std. Dev: 0.02\n",
-      "results using smoothing and bigrams and trigrams are not significant with respect to smoothing only\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# cross-validate model using smoothing and bigrams and trigrams\n",
     "print(\"--- cross-validating naive bayes using smoothing and bigrams and trigrams  ---\")\n",
@@ -301,18 +204,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- determining the number of features with/without bigrams ---\n",
-      "Number of features with just unigrams smoothing: 52555\n",
-      "Number of features with unigrams and bigrams: 500086\n",
-      "Number of features with unigrams, bigrams and trigrams: 1462605\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q5.1\n",
     "print(\"--- determining the number of features with/without bigrams ---\")\n",
@@ -324,63 +216,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- classifying reviews using SVM 10-fold cross-eval ---\n",
-      "Accuracy: 0.74\n",
-      "Std. Dev: 0.13\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"--- classifying reviews using SVM 10-fold cross-eval ---\")\n",
-    "SVM = SVMText(bigrams=False, trigrams=False, discard_closed_class=False, hyp={\"kernel\": \"linear\"})\n",
+    "SVM = SVMText(feat_type=BoWFeatureType.FREQ, hyp={\"kernel\": \"linear\"})\n",
     "SVM.crossValidate(corpus)\n",
-    "svm_preds=SVM.predictions\n",
     "print(f\"Accuracy: {SVM.getAccuracy():.2f}\") \n",
     "print(f\"Std. Dev: {SVM.getStdDeviation():.2f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- adding in POS information to corpus ---\n",
-      "--- training svm on word+pos features ----\n",
-      "--- training svm discarding closed-class words ---\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# TODO Q7\n",
     "print(\"--- adding in POS information to corpus ---\")\n",
+    "corpus = MovieReviewCorpus(stemming=False, pos=True)\n",
     "print(\"--- training svm on word+pos features ----\")\n",
-    "print(\"--- training svm discarding closed-class words ---\")"
+    "SVM = SVMText(feat_type=BoWFeatureType.FREQ, hyp={\"kernel\": \"linear\"})\n",
+    "SVM.crossValidate(corpus)\n",
+    "print(f\"Accuracy: {SVM.getAccuracy():.2f}\") \n",
+    "print(f\"Std. Dev: {SVM.getStdDeviation():.2f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- using document embeddings ---\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "print(\"--- training svm discarding closed-class words ---\")\n",
+    "corpus = MovieReviewCorpus(stemming=False, pos=True)\n",
+    "SVM = SVMText(feat_type=BoWFeatureType.FREQ, hyp={\"kernel\": \"linear\"}, discard_closed_class=True)\n",
+    "SVM.crossValidate(corpus)\n",
+    "print(f\"Accuracy: {SVM.getAccuracy():.2f}\") \n",
+    "print(f\"Std. Dev: {SVM.getStdDeviation():.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# question 8.0\n",
     "print(\"--- using document embeddings ---\")"
